<resources  xmlns:tools="http://schemas.android.com/tools">
    <string name="PUNTO">PU</string>
    <string name="PLANO">PL</string>
    <string name="DB_DynamicConfig_Type_BaseConfig">BaseConfig</string>
    <string name="DB_DynamicConfig_Type_PDAConfig">PDAConfig</string>
    <string name="DB_DynamicConfig_Type_Modules">modules</string>
    <string name="LeerTagContenedor">LeerTagContenedor</string>
    <string name="DB_DynamicConfig_Name_baseband">baseband</string>
    <string name="DB_DynamicConfig_Name_qValue">qValue</string>
    <string name="DB_DynamicConfig_Name_session">session</string>
    <string name="DB_DynamicConfig_Name_flag">flag</string>
    <string name="DB_DynamicConfig_Name_antCount">antCount</string>
    <string name="DB_DynamicConfig_Name_antPower">antPower</string>
    <string name="DB_DynamicConfig_Name_frequency">frequency</string>
    <string name="DB_DynamicConfig_Name_repeatTimeFilter">repeatTimeFilter</string>
    <string name="DB_DynamicConfig_Name_rssiFilter">rssiFilter</string>
    <string name="DB_DynamicConfig_Name_isOpen">isOpen</string>
    <string name="DB_DynamicConfig_Name_timeAutoIdle">timeAutoIdle</string>
    <string name="DB_DynamicConfig_Name_rfu">rfu</string>
    <string name="DB_DynamicConfig_Name_tagFocus">tagFocus</string>
    <string name="DB_DynamicConfig_Name_fastID">fastID</string>
    <string name="DB_DynamicConfig_Name_rfu2">rfu2</string>
    <string name="DB_DynamicConfig_Name_maxQ">maxQ</string>
    <string name="DB_DynamicConfig_Name_minQ">minQ</string>
    <string name="DB_DynamicConfig_Name_tmult">tmult</string>
    <string name="DB_DynamicConfig_Name_DynamicStartQenable">DynamicStartQenable</string>
    <string name="DB_DynamicConfig_Name_antenna">antenna</string>
    <string name="DB_DynamicConfig_Name_numberOfRetries">numberOfRetries</string>
    <string name="DB_DynamicConfig_Name_maxAntennaResistancetime">maxAntennaResistancetime</string>
    <string name="DB_DynamicConfig_Name_waitingTimeAntSwitch">waitingTimeAntSwitch</string>
    <string name="DB_DynamicConfig_Name_antennaSwitchingSequence">antennaSwitchingSequence</string>
    <string name="DB_DynamicConfig_Name_antennaProtectionThreshold">antennaProtectionThreshold</string>
    <string name="DB_DynamicConfig_Name_LBTMode">LBTMode</string>
    <string name="DB_DynamicConfig_Name_RSSIMaxVal">RSSIMaxVal</string>
    <string name="RFID_ErrorConexion">Error de conexion del modulo de RFID</string>
    <string name="RFID_ErrorLectura">Error de lectura del modulo de RFID</string>
    <string name="RFID_ErrorCambioPotencia">Error Cambiando la potencia el equipo podria tener problemas de distancia</string>
    <string name="RFID_ErrorGrabacion">Error en la grabacion, Intente nuevamente</string>
    <string name="RFID_AntPowerVerDetallePieza">AntPowerVerDetallePieza</string>
    <string name="RFID_AntPowerBCtoRFRead">AntPowerBCtoRFRead</string>
    <string name="RFID_AntPowerBCtoRFWrite">AntPowerBCtoRFWrite</string>
    <string name="RFID_AntPowerFinderRead">AntPowerFinderRead</string>
    <string name="RFID_AntPowerFinderSearch">AntPowerFinderSearch</string>
    <string name="RFID_AntPowerTrackerRead">AntPowerTrackerRead</string>
    <string name="RFID_AntPowerTrackerTrack">AntPowerTrackerTrack</string>
    <string name="RFID_AntPowerVerificacionRead">AntPowerVerificacionRead</string>
    <string name="RFID_AntPowerVerificacionTrack">AntPowerVerificacionTrack</string>
    <string name="RFID_AntPowerEstado4Read">AntPowerEstado4Read</string>
    <string name="RFID_AntPowerEstado4Track">AntPowerEstado4Track</string>
    <string name="RFID_AntPowerWriteContainerRead">AntPowerWriteContainerRead</string>
    <string name="RFID_VirginStartTag">E280</string>
    <string name="RFID_BaseBandX1">1,</string>
    <string name="RFID_BaseBandX2">2,</string>
    <string name="RFID_BaseBandX3">3,</string>
    <string name="RFID_BaseBandX4">4,</string>
    <string name="RFID_BaseBandX5">5,</string>
    <string name="RFID_MAXPOWER">30</string>
    <string name="BC_ErrorConexion">Error del modulo de BC</string>
    <string name="BC_ErrorLectura">Error de lectura de BC</string>
    <string name="GENERICENDPOINT">http://mail.cladd.com.ar:8803/IntegrationStockIT/</string>
    <string name="GENERICPOSITIVEBUTTON">OK</string>
    <string name="GENERICREQUEST">:REQUEST</string>
    <string name="GENERICPUNTOS">:</string>
    <string name="GENERICBARRA">/</string>
    <string name="GENERICGUION">-</string>
    <string name="GENERICCORRECTO">Correcto</string>
    <string name="GENERICERROR">Error</string>
    <string name="GENERICEPC">EPC</string>
    <string name="GENERICSI">SI</string>
    <string name="GENERICNO">NO</string>
    <string name="waiting">Cargando</string>
    <string name="str_busy">Espere!</string>
    <string name="str_success">Exito</string>
    <string name="str_faild">fallo</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_confirm">Confirmar</string>
    <string name="str_back">Atras</string>
    <string name="str_exit">Salir</string>
    <string name="str_br">\n</string>
    <string name="str_tab">\t</string>
    <string name="str_signoPregunta">\?</string>
    <string name="str_PDA">PDA</string>
    <string name="OPERARIOLOG">_OperarioLog</string>
    <string name="OPERARIODESC">_OperarioDesc</string>
    <string name="OPERARIOPLANTA">_OperarioPlanta</string>
    <string name="OPERARIOUSOTRACKER">_OperarioUsoTracker</string>
    <string name="OPERARIODEFAULTLOG">ADMIN</string>
    <string name="OPERARIODEFAULTDESC">ADMINUSER</string>
    <string name="OPERARIODEFAULTPLANTA">TEST</string>
    <string name="OPERARIODEFAULTUSOTRACKER">true</string>
    <string name="DESCRIPCION">descripcion</string>
    <string name="PLANTA">planta</string>
    <string name="HABILITAUSOTRACKER">habilitaUsoTracker</string>
    <string name="List_TagID">EPC</string>
    <string name="btn_UHFMenu_Configration">Count</string>
    <string name="List_ReadCount">Count</string>
    <string name="btn_read_stop">Stop</string>
    <string name="Clear_Tags">Clear</string>
    <string name="uhf_please_stop">Please stop!</string>
    <string name="uhf_low_power_info">Low battery, please charge!</string>
    <string name="uhf_read_power_over">The main power supply is being used, UHF power should not exceed 25dBm!</string>
    <string name="Config">Config</string>
    <string name="MasterConfig">MasterConfig</string>
    <string name="VerDetallePieza">VerDetallePieza</string>
    <string name="VerDetalleContenedor">VerDetalleContenedor</string>
    <string name="GrabarPieza">GrabarPieza</string>
    <string name="GrabarContenedor">GrabarContenedor</string>
    <string name="Finder">Finder</string>
    <string name="Trackeo">Trackeo</string>
    <string name="Verificacion">Verificacion</string>
    <string name="Estado4">Estado4</string>
    <string name="Inventario">Inventario</string>
    <string name="API_ENDPOINT">endpoint</string>
    <string name="API_FECHA">fecha</string>
    <string name="API_DATASOURCE">dataSource</string>
    <string name="API_RESPONSESTATE">responseState</string>
    <string name="API_RESPONSESTATE_ISERROR">isError</string>
    <string name="API_RESPONSESTATE_OBSERVACION">observacion</string>
    <string name="API_RESPONSESTATE_ERRORMESSAGE">errorMessage</string>
    <string name="API_CONTENTTYPE">application/json; charset=utf-8</string>
    <string name="app_name">StockITCladd</string>
    <string name="StockITBusinessID">01</string>
    <string name="tv_MainMenu_Title">StockIT</string>
    <string name="grid_itemImage">itemImage</string>
    <string name="grid_itemText">itemText</string>
    <string name="grid_itemActivity">itemActivity</string>
    <string name="tv_Configration_BaseSpeed">BaseSpeed:</string>
    <string name="tv_Configration_QValue">QValue:</string>
    <string name="tv_Configration_Frequency">Frequency:</string>
    <string name="tv_Configration_Power">Power:</string>
    <string name="tv_Configration_Ant">ANT:</string>
    <string name="tv_Configration_TagType">TagType:</string>
    <string name="btn_Get">GET</string>
    <string name="btn_Set">SET</string>
    <string name="btn_ReadTime">ReadTime(ms):</string>
    <string name="btn_StopTime">StopTime(ms): </string>
    <string name="btn_Restore">RESTORE</string>
    <string name="btn_CARRIER">CARRIER</string>
    <string name="tv_title_Login">Logueo Operario</string>
    <string name="tv_UsuarioLogueado">Usuario:</string>
    <string name="tv_VerDetallePieza_Title">Ver Detalle</string>
    <string name="tv_VerDetallePieza_Tipo"> Tipo</string>
    <string name="tv_VerDetallePieza_Pieza"> Pieza</string>
    <string name="tv_VerDetallePieza_DepSec"> Dep/Sec</string>
    <string name="tv_VerDetallePieza_Fecha"> Fecha</string>
    <string name="tv_VerDetallePieza_Partida"> Partida</string>
    <string name="tv_VerDetallePieza_Articulo"> Articulo</string>
    <string name="tv_VerDetallePieza_Color"> Color</string>
    <string name="tv_VerDetallePieza_Cliente"> Cliente</string>
    <string name="tv_VerDetallePieza_Comprobante"> Comp.</string>
    <string name="tv_VerDetallePieza_FechaComp">Fecha Comp.</string>
    <string name="tv_VerDetallePieza_Tipo_Manual">Tipo </string>
    <string name="tv_VerDetallePieza_NSerie_Manual">Pieza </string>
    <string name="rb_VerDetallePieza_BC">Codigo de barra </string>
    <string name="rb_VerDetallePieza_RF">Antena </string>
    <string name="btn_VerDetallePieza">Leer</string>
    <string name="error_VerDetallePieza_NSerie_Manual_Vacio">Error Complete el campo pieza</string>
    <string name="error_VerDetallePieza_ApiDevolvioRaro"> Error al obtener la pieza.</string>
    <string name="API_VerDetallePieza_Nombre">ConsultaStock</string>
    <string name="API_VerDetallePieza_Req_ID">ID</string>
    <string name="API_VerDetallePieza_Req_TipoProd">tipoProd</string>
    <string name="API_VerDetallePieza_Req_NSerie">nSerie</string>
    <string name="tv_GrabarPieza_Title">Grabar Pieza</string>
    <string name="tv_GrabarPieza_Tipo">Tipo</string>
    <string name="tv_GrabarPieza_Sector">Sector</string>
    <string name="tv_GrabarPieza_TID">Antena</string>
    <string name="tv_GrabarPieza_Pieza">Pieza</string>
    <string name="btn_GrabarPieza_Grabar">Grabar </string>
    <string name="btn_GrabarPieza_GrabarAMano">Grabar A Mano</string>
    <string name="rb_GrabarPieza_Escanear">Escanear Codigo</string>
    <string name="rb_GrabarPieza_Escribir">Escribir Codigo</string>
    <string name="rb_GrabarPieza_Grabar">Grabar</string>
    <string name="rb_GrabarPieza_GrabarUbicar">Grabar y Ubicar</string>
    <string name="metodo_GrabarPieza_GrabarTag">GrabarTag</string>
    <string name="error_GrabarPieza_CodigoErroneo"> Error el codigo no es correcto.</string>
    <string name="tv_GrabarContenedor_Antenna">Antena</string>
    <string name="tv_GrabarContenedor_Contenedor">Contenedor</string>
    <string name="btn_GrabarContenedor_Grabar">Grabar</string>
    <string name="tv_Finder_Sector">Sector</string>
    <string name="btn_Finder_Leer">Leer</string>
    <string name="tv_Finder_Asignados">Asig.</string>
    <string name="tv_Finder_Encontrados">Leidos</string>
    <string name="tv_Finder_Start">0</string>
    <string name="PopUpTrackeo_TipoProd">TipoProd</string>
    <string name="PopUpTrackeo_Error">Error</string>
    <string name="PopUpTrackeo_Nserie">Nserie</string>
    <string name="PopUpTrackeo_Mensaje">Mensaje</string>
    <string name="PopUpTrackeo_Asignados">Total:</string>
    <string name="PopUpTrackeo_Cargados">Trackeadas:</string>
    <string name="PopUpTrackeo_Verificados">Verificadas:</string>
    <string name="PopUpTrackeo_Start">0</string>
    <string name="tv_Inventario_Titulo">Titulo</string>
    <string name="btn_Inventario">Leer Piezas</string>
    <string name="btn_Inventario_Cerrar">Cerrar</string>
    <string name="tv_Inventario_Start">0</string>
</resources>