<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/PopUpTrackeo_TipoProd"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/PopUpTrackeo_TipoProd" />

        <TextView
            android:id="@+id/PopUpTrackeo_Nserie"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/PopUpTrackeo_Nserie"/>
        <TextView
            android:id="@+id/PopUpTrackeo_Error"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/PopUpTrackeo_Error"/>

        <TextView
            android:id="@+id/PopUpTrackeo_Mensaje"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/PopUpTrackeo_Mensaje"/>

</LinearLayout>
