<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/custom_action_bar"
		android:layout_height="50dp"
		android:layout_width="match_parent"
		/>


	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#808080"
		android:layout_marginVertical="5dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="10dp"
		android:id="@+id/view_split_main">


		<LinearLayout
			android:id="@+id/view_split_right"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/GrabarProceso"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<RadioGroup
					android:id="@+id/rg_WriteBcToRf_GrabarUbicar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="horizontal">

					<RadioButton
						android:id="@+id/rb_WriteBcToRf_Grabar"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="16dp"
						android:checked="false"
						android:text="@string/rb_GrabarPieza_Grabar" />

					<RadioButton
						android:id="@+id/rb_WriteBcToRf_GrabarUbicar"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="true"
						android:text="@string/rb_GrabarPieza_GrabarUbicar" />
				</RadioGroup>
			</LinearLayout>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:padding="10dp"
				android:background="@drawable/bg_button_default"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_GrabarPieza_Sector"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:weightSum="1"
					>

					<TextView
						android:id="@+id/tb_Write_Sector"
						android:layout_width="0dp"
						android:layout_weight="0.9"
						android:layout_height="wrap_content"
						android:background="@drawable/view_rectangle_morelist_gray"
						android:focusable="true"
						android:focusableInTouchMode="true"
						android:maxLines="1"
						android:minLines="1"/>
					<View
						android:id="@+id/v_GrabarPieza_LupaSector"
						android:layout_width="0dp"
						android:layout_weight="0.1"
						android:layout_height="match_parent"
						android:background="@drawable/lupa"
						/>
				</LinearLayout>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#808080"
				android:layout_marginVertical="5dp"/>

			<LinearLayout
				android:id="@+id/view_split_down"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<!-- 写数据区 -->

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:id="@+id/view_split_left">


					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="2dp"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/tv_GrabarPieza_TID"/>

						<TextView
							android:id="@+id/tb_Write_MatchTID"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:background="@drawable/view_rectangle_morelist_gray"
							android:focusable="true"
							android:focusableInTouchMode="true"
							android:maxLines="2"
							android:minLines="2"
							/>
					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="2dp"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/tv_GrabarPieza_Pieza"/>

					<EditText
						android:id="@+id/tb_Write_WriteNSerie"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/view_rectangle_morelist_gray"
						android:focusable="true"
						android:focusableInTouchMode="true"
						android:maxLines="1"
						android:minLines="1"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/aas"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<RadioGroup
						android:id="@+id/rg_WriteBcToRf_EscanearOEscribir"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:orientation="horizontal">

						<RadioButton
							android:id="@+id/rb_WriteBcToRf_Escanear"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginRight="16dp"
							android:checked="true"
							android:text="@string/rb_GrabarPieza_Escanear" />

						<RadioButton
							android:id="@+id/rb_WriteBcToRf_Escribir"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:checked="false"
							android:text="@string/rb_GrabarPieza_Escribir" />
					</RadioGroup>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:weightSum="1"
					android:orientation="horizontal">
					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:text="@string/tv_GrabarPieza_Tipo"
						android:layout_weight="0.3"
						/>
					<Spinner
						android:id="@+id/sp_WriteTipo"
						android:layout_width="0dp"
						android:layout_weight="0.7"
						android:layout_height="wrap_content"
						android:entries="@array/Array_TipoProducto"
						android:prompt="@string/Clear_Tags"
						android:textSize="18sp"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="2dp"
					android:orientation="horizontal">

					<Button
						android:id="@+id/btn_GrabarPieza"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5dp"
						android:background="@drawable/button_blue"
						android:onClick="WriteHand"
						android:text="@string/btn_GrabarPieza_Grabar" />
				</LinearLayout>

			</LinearLayout>

		</LinearLayout>



	</LinearLayout>
</LinearLayout>