<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/UHFTheme"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/custom_action_bar"
		android:layout_height="50dp"
		android:layout_width="match_parent"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#808080"
		android:layout_marginVertical="1dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tv_Inventario_Titulo"
			android:layout_marginRight="20dp"/>

		<EditText
			android:id="@+id/et_Inventario_Titulo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/view_rectangle_morelist_gray"
			android:inputType="text"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:maxLines="1"
			android:minLines="1"/>


	</LinearLayout>

	<ListView
		android:id="@+id/lv_Main"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="0.85"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#808080"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">


		<TextView
			android:id="@+id/lb_TagCount"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.3"
			android:text="@string/tv_Inventario_Start"/>
	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#808080"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">


		<Button
			android:id="@+id/btn_Inventario"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="0.8"
			android:background="@drawable/button_blue"
			android:text="@string/btn_Inventario"
			android:textSize="18sp"/>
		<Button
			android:id="@+id/btn_Inventario_Operacion"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="0.3"
			android:background="@drawable/button_green"
			android:text="@string/btn_Inventario_Cerrar"
			android:textSize="18sp"/>
	</LinearLayout>

</LinearLayout>