<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/UHFTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/custom_action_bar"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginVertical="1dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:layout_weight="0.85"
        android:id="@+id/view_split_main">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_Finder_Sector"
                android:layout_weight="0.2"/>

            <TextView
                android:id="@+id/et_Finder_Nro"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                />
            <View
                android:id="@+id/v_editContainer"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:background="@drawable/edit">

            </View>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:orientation="vertical"
            android:layout_marginVertical="5dp"

            >


            <ListView
                android:id="@+id/lv_Main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="@string/tv_Finder_Asignados"/>

                    <TextView
                        android:id="@+id/tv_Finder_Asignados"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/tv_Finder_Start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="@string/tv_Finder_Encontrados"/>

                    <TextView
                        android:id="@+id/tv_Finder_Encontrados"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:text="@string/tv_Finder_Start"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#808080"
                    android:layout_marginVertical="5dp"/>

                <Button
                    android:id="@+id/btn_Finder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/button_blue"
                    android:text="@string/btn_Finder_Leer"
                    android:textSize="18sp"/>


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</LinearLayout>
