<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/custom_action_bar"
		android:layout_height="50dp"
		android:layout_width="match_parent"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#808080"
		android:layout_marginVertical="5dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="20dp"
		android:id="@+id/view_split_main">


		<LinearLayout
			android:id="@+id/view_split_right"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<!-- 写数据区 -->

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/view_split_left">


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="2dp"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/tv_GrabarContenedor_Antenna"/>

					<TextView
						android:id="@+id/tv_GrabarContenedor_TagAGrabar"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:background="#D3D3D3"
						android:focusable="true"
						android:focusableInTouchMode="true"
						android:maxLines="2"
						android:minLines="2"
						/>
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_GrabarContenedor_Contenedor"/>

				<EditText
					android:id="@+id/et_GrabarContenedor_Contenedor"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:focusable="true"
					android:focusableInTouchMode="true"
					android:maxLines="1"
					android:minLines="1"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/aas"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			</LinearLayout>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<Button
					android:id="@+id/btn_GrabarContenedor"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:background="@drawable/button_blue"
					android:text="@string/btn_GrabarContenedor_Grabar" />
			</LinearLayout>

		</LinearLayout>
	</LinearLayout>
</LinearLayout>